# metasyn

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  Blogpost.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  smalltest.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: core-ci.yml  docker-build.yml  docker-image.yml  joss-paper-draft.yml  main-ci.yml  python-check.yml  python-docs.yml  python-package.yml  python-publish.yml  python-test.yml  release-dockerhub.yml  scheduled-ci.yml
docs/: Makefile  requirements.txt
docs/paper/: build_command.txt  paper.bib  paper.md
docs/source/: about.rst  cli.rst  conf.py  datafree.rst  developer.rst  extensions.rst  faq.rst  improve_synth.rst  index.rst  installation.rst  metaframes.rst  metasyn_in_detail.rst  metasynth.rst  modules.rst  plugins.rst  quick_start.rst  tutorials.rst  what_is_metasyn.rst
docs/source/about/: about.rst  contact.rst  faq.rst  license.rst  metasyn_in_detail.rst  metasynth_in_detail.rst  what_is.rst
docs/source/api/: developer_reference.rst  metaframe.rst  metasyn.demo.rst  metasyn.distribution.rst  metasyn.rst  metasyn.schema.rst  metasynth.distribution.regex.rst  metasynth.distribution.rst  metasynth.privacy.cbs.rst  metasynth.privacy.rst  metasynth.rst  metasynth.schema.rst  varspec.rst
docs/source/developer/: GMF.rst  contributing.rst  detailed_overview.rst  developer.rst  distributions.rst  extending_functionality.rst  filereaders.rst  overview.rst  plugins.rst  privacy.rst
docs/source/images/: ClassDiagram.drawio  Diagrams_figma.jam  distributions.drawio  pipeline.afphoto  pipeline.afphoto~lock~
docs/source/images/logos/: metasyn.afdesign
docs/source/usage/: cli.rst  config_files.rst  exporting_metaframes.rst  extensions.rst  generating_metadata.rst  generating_metaframes.rst  generating_synthetic_data.rst  installation.rst  interactive_tutorials.rst  quick_start.rst  saving_metaframes.rst  usage.rst
examples/: advanced_tutorial.ipynb  basic_example.json  basic_example.py  benchmark-dist.ipynb  benchmark.ipynb  create_demonstration.ipynb  demonstration.csv  demonstration_metadata.json  descriptions.ipynb  example_config.toml  example_gmf_simple.json  example_gmf_titanic.json  getting_started.ipynb  metavar.ipynb  no_data_config.toml  regex.ipynb  regex_3rd_edition.ipynb  titanic.ipynb  titanic_example.json  utils.py
examples/config_files/: example_all.toml  example_config.toml  example_datafree.toml  file_interface.toml
examples/data/: preview.py  synthesize.sh
examples/gmf_files/: example_gmf_simple.json  example_gmf_titanic.json
metasyn/: __init__.py  __main__.py  config.py  dataset.py  file.py  filehandler.py  filereader.py  metaframe.py  privacy.py  provider.py  registry.py  spec.py  testutils.py  util.py  validation.py  var.py  varspec.py
metasyn/demo/: __init__.py  dataset.py  demo_druguse.csv  demo_fruit.csv  demo_hospital.csv  demo_spaceship.csv  demo_survey.csv  demo_synthea_imaging.csv  demo_test.csv  demo_titanic.csv
metasyn/distribution/: __init__.py  base.py  categorical.py  constant.py  continuous.py  datetime.py  discrete.py  exponential.py  faker.py  freetext.py  na.py  normal.py  poisson.py  regex.py  string.py  uniform.py  uniquekey.py  util.py
metasyn/distribution/legacy/: __init__.py
metasyn/distribution/legacy/regex/: __init__.py  base.py  element.py  optimizer.py
metasyn/schema/: __init__.py  plugin_registry.toml
metasynth/: __init__.py  __main__.py  _version.py  dataset.py  distpkg.py  distribution.py  disttree.py  metadata.py  metadist.py  privacy.py  provider.py  reader.py  spec.py  testutils.py  validation.py  var.py
metasynth/demo/: __init__.py  dataset.py
metasynth/distribution/: __init__.py  base.py  categorical.py  continuous.py  datetime.py  discrete.py  faker.py  float.py  int.py  na.py  regex.py  string.py  util.py
metasynth/distribution/legacy/: __init__.py
metasynth/distribution/legacy/regex/: __init__.py  base.py  element.py
metasynth/distribution/regex/: __init__.py  base.py  element.py  optimizer.py
metasynth/privacy/: __init__.py
metasynth/privacy/cbs/: __init__.py  continuous.py  discrete.py  utils.py
metasynth/schema/: generative_metadata_format.json  metasynth-1_0.json
paper/: build_command.txt  paper.bib  paper.jats  paper.md
tests/: test_builtin.py  test_cli.py  test_config.py  test_continuous.py  test_dataset.py  test_datetime.py  test_demo.py  test_discrete.py  test_distribution.py  test_faker.py  test_file.py  test_filereader.py  test_na.py  test_privacy.py  test_provider.py  test_regex.py  test_string.py  test_toml.py  test_var.py
tests/data/: GlastonburyFestival.sav  SAQ (Item 3 Reversed).sav  actually_a_sav_file.csv  bad_config.toml  butlerpsych.sav  data.tsv  example_config.toml  incompatible_config.toml  no_data_config.toml  test.json  tmp.json  twowayexample.sav  unsupported_config.toml
